# Minecart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
Minecart/: CMakeLists.txt
Minecart/include/: framebuffer.h  logging.h  minecart.h  model.h  shaders.h
Minecart/src/: logging.cpp  logging_types.h  minecart.cpp  shaders.cpp
cmake/: 3rdparty.cmake  glm.cmake  minecart.cmake
resources/minecart/shaders/: default_fragment.glsl  default_vertex.glsl
src/Editor/: CMakeLists.txt  main.cpp
